Fix spacings

--- a/packages/manager-components/src/design/Layout/styles.css
+++ b/packages/manager-components/src/design/Layout/styles.css
@@ -35,10 +35,10 @@
 }
 
 .layout {
-  margin: 70px 16px;
+  padding: 50px 16px;
 
   @media (--viewport-s) {
-    margin: 70px 7%;
+    padding: 50px 7%;
   }
 }
 
